<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereo_streamer</name>
  <version>0.0.0</version>
  <description>Publish left and right camera feeds with calibration data from stereo camera module</description>
  <maintainer email="broomey2014@outlook.com">michael</maintainer>
  <license>BSD</license>
  <author>Michael Broome</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>camera_calibration_parsers</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
